# lmcache_demo

./: .env.example  .gitignore  AGENTS.MD  Dockerfile  README.md  docker-compose.yml  lmcache-config.yaml  pyproject.toml  test_connection.py
data/: operations_manual.txt
grafana/provisioning/dashboards/: llm-metrics.json
prometheus/: prometheus.yml
scripts/: benchmark_cache.py  chat.py
src/: main.py
src/api/: __init__.py  prometheus.py  routes.py  schemas.py
src/cache/: __init__.py  metrics.py
src/config/: __init__.py  langfuse.py  settings.py
src/graph/: __init__.py  builder.py  nodes.py  state.py
src/prompts/: __init__.py  aggregator.prompty  compliance_auditor.prompty  manager.py  router.prompty  support_concierge.prompty  technical_specialist.prompty  warmup.prompty
tests/: conftest.py  test_cache_efficiency.py  test_cache_ttft.py  test_direct_ttft.py  test_integration.py
